2nd CRUD practice done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-todo-dashboard></app-todo-dashboard>
+<div class="container">
+  <app-todo-dashboard></app-todo-dashboard>
+  <app-todo-two></app-todo-two> 
+</div>
