--- a/src/app/components/todo-dashboard/todo-dashboard.component.html
+++ b/src/app/components/todo-dashboard/todo-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container"> -->
   <div class="row mt-5">
     <div class="col-md-5">
       <div class="card">
@@ -52,4 +52,4 @@
       </div>
     </div>
   </div>
-</div>
+<!-- </div> -->
