24:43.65 time took 3rd time for todoCrud

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <app-todo-dashboard></app-todo-dashboard>
-  <app-todo-two></app-todo-two> 
+  <app-todo-two></app-todo-two>
+  <app-crud-three> </app-crud-three>
 </div>
