--- a/src/app/components/crud-three/crud-three.component.html
+++ b/src/app/components/crud-three/crud-three.component.html
@@ -12,9 +12,11 @@
         >
           Add Todo
         </button>
-        <button class="btn btn-block mt-3 btn-success"
-        (click)="onUpdate()"
-        *ngIf="isInEditMode">
+        <button
+          class="btn btn-block mt-3 btn-success"
+          (click)="onUpdate()"
+          *ngIf="isInEditMode"
+        >
           Update Todo
         </button>
       </div>
@@ -24,7 +26,7 @@
   <div class="col-md-7">
     <div class="card">
       <div class="card-body">
-        <ul class="list-group">
+        <ul class="list-group" *ngIf="todoArr.length > 0; else noTodo">
           <li
             *ngFor="let todo of todoArr"
             class="list-group-item d-flex justify-content-between align-items-center"
@@ -44,6 +46,12 @@
             </div>
           </li>
         </ul>
+
+       <ng-template #noTodo>
+          <p class="alert alert-warning">
+            No Todo !!!
+          </p>
+        </ng-template>
       </div>
     </div>
   </div>
