--- a/src/app/components/todo-dashboard/todo-dashboard.component.html
+++ b/src/app/components/todo-dashboard/todo-dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="container"> -->
-<h1 class="text-center text-white">
+<h1 class="text-center text-dark">
   {{ isInEditMode ? "Update Todo" : "Add Todo" }}
 </h1>
 <div class="row mt-5">
