--- a/src/app/components/todo-two/todo-two.component.html
+++ b/src/app/components/todo-two/todo-two.component.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
         <ng-template #noTodo>
-          <p class="alert alert-warning">NO TODO !!!</p>
+          <p class="alert alert-info">NO TODO !!!</p>
         </ng-template>
       </div>
     </div>
